# mongo-desk

./: .eslintrc.cjs  .gitignore  .prettierrc  LICENSE  README.md  TELEMETRY.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.svelte  app.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/migrations/: 001_initial.sql  002_history.sql  003_backups.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: collection.rs  connection.rs  database.rs  document.rs  mod.rs  query.rs
src-tauri/src/db/: mod.rs  queries.rs  sqlite.rs
src-tauri/src/models/: collection.rs  connection.rs  database.rs  document.rs  mod.rs  query.rs
src-tauri/src/services/: collection.rs  connection_manager.rs  database.rs  document.rs  encryption_service.rs  keychain_service.rs  mod.rs  query.rs  worker_pool.rs
src/frontend/components/common/: ConfirmDialog.svelte  ErrorBoundary.svelte  FilterDialog.svelte  Toast.svelte  ToastContainer.svelte  VirtualList.svelte
src/frontend/components/connection/: ConnectionDialog.svelte  ConnectionForm.svelte  ConnectionGroup.svelte  ConnectionItem.svelte  ConnectionStatus.svelte  ConnectionTree.svelte
src/frontend/services/: tauriBridge.ts
src/frontend/stores/: connectionStore.svelte.ts  connectionStore.ts  documentStore.ts  errorStore.svelte.ts  explorerStore.ts  queryStore.ts
src/frontend/types/: connection.ts  document.ts  query.ts
(+21 files in other folders)
